--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,9 +5,10 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1.0.75"
-# clap = { version = "4.4.6", features = ["derive"] }
+argh = "0.1.12"
 dialoguer = { version = "0.11.0", features = ["completion"] }
 dirs = "5.0.1"
+fastrand = "2.0.1"
 indicatif = "0.17.7"
 names = "0.14.0"
 parse_duration = "2.1.1"
