--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ license = "MIT"
 
 [dependencies]
 anyhow = "1.0.75"
-argh = "0.1.12"
+clap = { version = "4.5.4", features = ["derive"] }
 dialoguer = { version = "0.11.0", features = ["completion"] }
 dirs = "5.0.1"
 fastrand = "2.0.1"
